modified go env6

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
         - name: containerd-test
-          image: containerd-test:latest
+          image: yangk/containerd-test:latest
