--- a/Dockerfile.limit
+++ b/Dockerfile.limit
@@ -4,7 +4,7 @@ ENV CONTEXT_DIR=${WORKDIR}
 ENV TRANSIENT_MOUNT=${WORKDIR}:${WORKDIR}
 ENV DOCKERFILE_NAME=${WORKDIR}/Dockerfile.test
 ENV OUTPUT=docker.io/yangk/builah-test:0.0.1
-# CMD ["/workspace/main"]
+CMD ["/workspace/main"]
 
 #FROM debian:buster
 #ARG WORKDIR=/root
